tests/src/frontend/typechecking/exhaustiveness/invalid/nested_non_subtype1.sk
base class B {
  children =
  | X()
  | Y()
  | Z()
}
base class L {
  children =
  | R()
  | G()
  | H()
}
fun test(): String {
  (Y(), G()) match {
  | (Y(), G())
  | (X(), R())
  | (Z(), H()) ->
    "Fail\n"
  }
}
